python-ver/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     program -> compound_statement
Rule 3     block -> unlabelled_block
Rule 4     block -> TLABEL COLON block
Rule 5     unlabelled_block -> block_head SEMICOLON compound_tail
Rule 6     block_head -> BEGIN declaration
Rule 7     block_head -> block_head SEMICOLON declaration
Rule 8     compound_statement -> unlabelled_compound
Rule 9     compound_statement -> label COLON compound_statement
Rule 10    unlabelled_compound -> BEGIN compound_tail
Rule 11    compound_tail -> statement END
Rule 12    compound_tail -> statement SEMICOLON compound_tail
Rule 13    declaration -> type_declaration
Rule 14    declaration -> array_declaration
Rule 15    declaration -> switch_declaration
Rule 16    declaration -> procedure_declaration
Rule 17    type_declaration -> local_or_own_type type_list
Rule 18    local_or_own_type -> type
Rule 19    local_or_own_type -> TOWN type
Rule 20    type -> TREAL
Rule 21    type -> TINTEGER
Rule 22    type -> TBOOLEAN
Rule 23    type_list -> simple_variable
Rule 24    type_list -> simple_variable COMMA type_list
Rule 25    array_declaration -> TARRAY array_list
Rule 26    array_declaration -> local_or_own_type TARRAY array_list
Rule 27    array_list -> array_segment
Rule 28    array_list -> array_list COMMA array_segment
Rule 29    array_segment -> array_identifier LBBRACKET bound_pair_list RBBRACKET
Rule 30    array_segment -> array_identifier COMMA array_segment
Rule 31    array_identifier -> IDENTIFIER
Rule 32    bound_pair_list -> bound_pair
Rule 33    bound_pair_list -> bound_pair_list COMMA bound_pair
Rule 34    bound_pair -> lower_bound COLON upper_bound
Rule 35    upper_bound -> arithmetic_expression
Rule 36    lower_bound -> arithmetic_expression
Rule 37    switch_declaration -> SWITCH switch_identifier ASSIGNMENT switch_list
Rule 38    switch_identifier -> IDENTIFIER
Rule 39    switch_list -> designational_expression
Rule 40    switch_list -> switch_list COMMA designational_expression
Rule 41    procedure_declaration -> PROCEDURE procedure_heading procedure_body
Rule 42    procedure_declaration -> type PROCEDURE procedure_heading procedure_body
Rule 43    procedure_heading -> procedure_identifier formal_parameter_part SEMICOLON value_part specification_part
Rule 44    procedure_identifier -> IDENTIFIER
Rule 45    formal_parameter_part -> <empty>
Rule 46    formal_parameter_part -> LCBRACKET formal_parameter_list RCBRACKET
Rule 47    formal_parameter_list -> formal_parameter
Rule 48    formal_parameter_list -> formal_parameter_list parameter_delimiter formal_parameter
Rule 49    formal_parameter -> IDENTIFIER
Rule 50    value_part -> <empty>
Rule 51    value_part -> TVALUE identifier_list SEMICOLON
Rule 52    specification_part -> <empty>
Rule 53    specification_part -> specifier identifier_list SEMICOLON
Rule 54    specification_part -> specification_part specifier identifier_list
Rule 55    specifier -> TSTRING
Rule 56    specifier -> type
Rule 57    specifier -> TARRAY
Rule 58    specifier -> type TARRAY
Rule 59    specifier -> TLABEL
Rule 60    specifier -> SWITCH
Rule 61    specifier -> PROCEDURE
Rule 62    specifier -> type PROCEDURE
Rule 63    identifier_list -> IDENTIFIER
Rule 64    identifier_list -> identifier_list COMMA IDENTIFIER
Rule 65    procedure_body -> statement
Rule 66    statement -> unconditional_statement
Rule 67    statement -> conditional_statement
Rule 68    statement -> for_statement
Rule 69    unconditional_statement -> basic_statement
Rule 70    unconditional_statement -> compound_statement
Rule 71    unconditional_statement -> block
Rule 72    basic_statement -> unlabelled_basic_statement
Rule 73    basic_statement -> label COLON basic_statement
Rule 74    label -> IDENTIFIER
Rule 75    label -> unsigned_integer
Rule 76    unlabelled_basic_statement -> assignment_statement
Rule 77    unlabelled_basic_statement -> go_to_statement
Rule 78    unlabelled_basic_statement -> procedure_statement
Rule 79    assignment_statement -> left_part_list arithmetic_expression
Rule 80    assignment_statement -> left_part_list boolean_expression
Rule 81    left_part_list -> left_part
Rule 82    left_part_list -> left_part_list left_part
Rule 83    left_part -> variable ASSIGNMENT
Rule 84    left_part -> procedure_identifier ASSIGNMENT
Rule 85    go_to_statement -> GOTO designational_expression
Rule 86    designational_expression -> simple_designational_expression
Rule 87    designational_expression -> if_clause simple_designational_expression ELSE designational_expression
Rule 88    simple_designational_expression -> label
Rule 89    simple_designational_expression -> switch_designator
Rule 90    simple_designational_expression -> LCBRACKET designational_expression RCBRACKET
Rule 91    switch_designator -> switch_identifier LBBRACKET subscript_expression RBBRACKET
Rule 92    procedure_statement -> procedure_identifier actual_parameter_part
Rule 93    actual_parameter_part -> LCBRACKET RCBRACKET
Rule 94    actual_parameter_part -> LCBRACKET actual_parameter_list RCBRACKET
Rule 95    actual_parameter_list -> actual_parameter
Rule 96    actual_parameter_list -> actual_parameter_list parameter_delimiter actual_parameter
Rule 97    parameter_delimiter -> COMMA
Rule 98    parameter_delimiter -> RCBRACKET letter_string COLON LCBRACKET
Rule 99    actual_parameter -> string
Rule 100   actual_parameter -> expression
Rule 101   actual_parameter -> array_identifier
Rule 102   actual_parameter -> switch_identifier
Rule 103   actual_parameter -> procedure_identifier
Rule 104   conditional_statement -> if_statement
Rule 105   conditional_statement -> if_statement ELSE statement
Rule 106   conditional_statement -> if_clause for_statement
Rule 107   conditional_statement -> label COLON conditional_statement
Rule 108   if_statement -> if_clause unconditional_statement
Rule 109   if_clause -> IF boolean_expression THEN
Rule 110   for_statement -> for_clause statement
Rule 111   for_statement -> label COLON for_statement
Rule 112   for_clause -> FOR variable ASSIGNMENT for_list DO
Rule 113   for_list -> for_list_element
Rule 114   for_list -> for_list COMMA for_list_element
Rule 115   for_list_element -> arithmetic_expression
Rule 116   for_list_element -> arithmetic_expression STEP arithmetic_expression UNTIL arithmetic_expression
Rule 117   for_list_element -> arithmetic_expression WHILE boolean_expression
Rule 118   expression -> arithmetic_expression
Rule 119   expression -> boolean_expression
Rule 120   expression -> designational_expression
Rule 121   arithmetic_expression -> simple_arithmetic_expression
Rule 122   arithmetic_expression -> if_clause simple_arithmetic_expression ELSE arithmetic_expression
Rule 123   simple_arithmetic_expression -> term
Rule 124   simple_arithmetic_expression -> adding_operator term
Rule 125   simple_arithmetic_expression -> simple_arithmetic_expression adding_operator term
Rule 126   adding_operator -> PLUS
Rule 127   adding_operator -> MINUS
Rule 128   term -> factor
Rule 129   term -> term multiplying_operator factor
Rule 130   multiplying_operator -> TIMES
Rule 131   multiplying_operator -> DIV
Rule 132   multiplying_operator -> MOD
Rule 133   factor -> primary
Rule 134   factor -> factor
Rule 135   factor -> factor POWER primary
Rule 136   primary -> unsigned_number
Rule 137   primary -> variable
Rule 138   primary -> function_designator
Rule 139   primary -> LCBRACKET arithmetic_expression RCBRACKET
Rule 140   unsigned_number -> decimal_number
Rule 141   unsigned_number -> exponential_part
Rule 142   unsigned_number -> decimal_number exponential_part
Rule 143   decimal_number -> unsigned_integer
Rule 144   decimal_number -> decimal_fraction
Rule 145   decimal_number -> unsigned_integer decimal_fraction
Rule 146   unsigned_integer -> DIGIT
Rule 147   unsigned_integer -> unsigned_integer DIGIT
Rule 148   decimal_fraction -> DOT unsigned_integer
Rule 149   exponential_part -> EREAL integer
Rule 150   integer -> unsigned_integer
Rule 151   integer -> PLUS unsigned_integer
Rule 152   integer -> MINUS unsigned_integer
Rule 153   boolean_expression -> simple_boolean
Rule 154   boolean_expression -> if_clause simple_boolean ELSE boolean_expression
Rule 155   simple_boolean -> implication
Rule 156   simple_boolean -> simple_boolean EQUIV implication
Rule 157   implication -> boolean_term
Rule 158   implication -> implication IMPL boolean_term
Rule 159   boolean_term -> boolean_factor
Rule 160   boolean_term -> boolean_term OR boolean_factor
Rule 161   boolean_factor -> boolean_secondary
Rule 162   boolean_factor -> boolean_factor AND boolean_secondary
Rule 163   boolean_secondary -> boolean_primary
Rule 164   boolean_secondary -> NOT boolean_primary
Rule 165   boolean_primary -> logical_value
Rule 166   boolean_primary -> variable
Rule 167   boolean_primary -> function_designator
Rule 168   boolean_primary -> relation
Rule 169   boolean_primary -> LCBRACKET boolean_expression RCBRACKET
Rule 170   relation -> simple_arithmetic_expression relational_operator simple_arithmetic_expression
Rule 171   function_designator -> procedure_identifier actual_parameter_part
Rule 172   variable -> simple_variable
Rule 173   variable -> subscripted_variable
Rule 174   simple_variable -> variable_identifier
Rule 175   variable_identifier -> IDENTIFIER
Rule 176   subscripted_variable -> array_identifier LBBRACKET subscript_list RBBRACKET
Rule 177   subscript_list -> subscript_expression
Rule 178   subscript_list -> subscript_list COMMA subscript_expression
Rule 179   subscript_expression -> arithmetic_expression
Rule 180   string -> STRING
Rule 181   letter_string -> LETTER
Rule 182   letter_string -> letter_string LETTER
Rule 183   logical_value -> TRUE
Rule 184   logical_value -> FALSE
Rule 185   relational_operator -> LESS
Rule 186   relational_operator -> NOTGREATER
Rule 187   relational_operator -> EQUAL
Rule 188   relational_operator -> NOTLESS
Rule 189   relational_operator -> GREATER
Rule 190   relational_operator -> NOTEQUAL

Terminals, with rules where they appear

AND                  : 162
ASSIGNMENT           : 37 83 84 112
BEGIN                : 6 10
COLON                : 4 9 34 73 98 107 111
COMMA                : 24 28 30 33 40 64 97 114 178
COMMENT              : 
DIGIT                : 146 147
DIV                  : 131
DO                   : 112
DOT                  : 148
ELSE                 : 87 105 122 154
END                  : 11
EQUAL                : 187
EQUIV                : 156
EREAL                : 149
FALSE                : 184
FOR                  : 112
GOTO                 : 85
GREATER              : 189
IDENTIFIER           : 31 38 44 49 63 64 74 175
IF                   : 109
IMPL                 : 158
LBBRACKET            : 29 91 176
LCBRACKET            : 46 90 93 94 98 139 169
LESS                 : 185
LETTER               : 181 182
MINUS                : 127 152
MOD                  : 132
NOT                  : 164
NOTEQUAL             : 190
NOTGREATER           : 186
NOTLESS              : 188
OR                   : 160
PLUS                 : 126 151
POWER                : 135
PROCEDURE            : 41 42 61 62
RBBRACKET            : 29 91 176
RCBRACKET            : 46 90 93 94 98 139 169
SEMICOLON            : 5 7 12 43 51 53
STEP                 : 116
STRING               : 180
SWITCH               : 37 60
TARRAY               : 25 26 57 58
TBOOLEAN             : 22
THEN                 : 109
TIMES                : 130
TINTEGER             : 21
TLABEL               : 4 59
TOWN                 : 19
TREAL                : 20
TRUE                 : 183
TSTRING              : 55
TVALUE               : 51
UNTIL                : 116
WHILE                : 117
error                : 

Nonterminals, with rules where they appear

actual_parameter     : 95 96
actual_parameter_list : 94 96
actual_parameter_part : 92 171
adding_operator      : 124 125
arithmetic_expression : 35 36 79 115 116 116 116 117 118 122 139 179
array_declaration    : 14
array_identifier     : 29 30 101 176
array_list           : 25 26 28
array_segment        : 27 28 30
assignment_statement : 76
basic_statement      : 69 73
block                : 1 4 71
block_head           : 5 7
boolean_expression   : 80 109 117 119 154 169
boolean_factor       : 159 160 162
boolean_primary      : 163 164
boolean_secondary    : 161 162
boolean_term         : 157 158 160
bound_pair           : 32 33
bound_pair_list      : 29 33
compound_statement   : 2 9 70
compound_tail        : 5 10 12
conditional_statement : 67 107
decimal_fraction     : 144 145
decimal_number       : 140 142
declaration          : 6 7
designational_expression : 39 40 85 87 90 120
exponential_part     : 141 142
expression           : 100
factor               : 128 129 134 135
for_clause           : 110
for_list             : 112 114
for_list_element     : 113 114
for_statement        : 68 106 111
formal_parameter     : 47 48
formal_parameter_list : 46 48
formal_parameter_part : 43
function_designator  : 138 167
go_to_statement      : 77
identifier_list      : 51 53 54 64
if_clause            : 87 106 108 122 154
if_statement         : 104 105
implication          : 155 156 158
integer              : 149
label                : 9 73 88 107 111
left_part            : 81 82
left_part_list       : 79 80 82
letter_string        : 98 182
local_or_own_type    : 17 26
logical_value        : 165
lower_bound          : 34
multiplying_operator : 129
parameter_delimiter  : 48 96
primary              : 133 135
procedure_body       : 41 42
procedure_declaration : 16
procedure_heading    : 41 42
procedure_identifier : 43 84 92 103 171
procedure_statement  : 78
program              : 0
relation             : 168
relational_operator  : 170
simple_arithmetic_expression : 121 122 125 170 170
simple_boolean       : 153 154 156
simple_designational_expression : 86 87
simple_variable      : 23 24 172
specification_part   : 43 54
specifier            : 53 54
statement            : 11 12 65 105 110
string               : 99
subscript_expression : 91 177 178
subscript_list       : 176 178
subscripted_variable : 173
switch_declaration   : 15
switch_designator    : 89
switch_identifier    : 37 91 102
switch_list          : 37 40
term                 : 123 124 125 129
type                 : 18 19 42 56 58 62
type_declaration     : 13
type_list            : 17 24
unconditional_statement : 66 108
unlabelled_basic_statement : 72
unlabelled_block     : 3
unlabelled_compound  : 8
unsigned_integer     : 75 143 145 147 148 150 151 152
unsigned_number      : 136
upper_bound          : 34
value_part           : 43
variable             : 83 112 137 166
variable_identifier  : 174

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) program -> . compound_statement
    (3) block -> . unlabelled_block
    (4) block -> . TLABEL COLON block
    (8) compound_statement -> . unlabelled_compound
    (9) compound_statement -> . label COLON compound_statement
    (5) unlabelled_block -> . block_head SEMICOLON compound_tail
    (10) unlabelled_compound -> . BEGIN compound_tail
    (74) label -> . IDENTIFIER
    (75) label -> . unsigned_integer
    (6) block_head -> . BEGIN declaration
    (7) block_head -> . block_head SEMICOLON declaration
    (146) unsigned_integer -> . DIGIT
    (147) unsigned_integer -> . unsigned_integer DIGIT

    TLABEL          shift and go to state 4
    BEGIN           shift and go to state 1
    IDENTIFIER      shift and go to state 11
    DIGIT           shift and go to state 6

    unlabelled_compound            shift and go to state 2
    compound_statement             shift and go to state 3
    unlabelled_block               shift and go to state 5
    label                          shift and go to state 7
    program                        shift and go to state 8
    unsigned_integer               shift and go to state 9
    block_head                     shift and go to state 10
    block                          shift and go to state 12

state 1

    (10) unlabelled_compound -> BEGIN . compound_tail
    (6) block_head -> BEGIN . declaration
    (11) compound_tail -> . statement END
    (12) compound_tail -> . statement SEMICOLON compound_tail
    (13) declaration -> . type_declaration
    (14) declaration -> . array_declaration
    (15) declaration -> . switch_declaration
    (16) declaration -> . procedure_declaration
    (66) statement -> . unconditional_statement
    (67) statement -> . conditional_statement
    (68) statement -> . for_statement
    (17) type_declaration -> . local_or_own_type type_list
    (25) array_declaration -> . TARRAY array_list
    (26) array_declaration -> . local_or_own_type TARRAY array_list
    (37) switch_declaration -> . SWITCH switch_identifier ASSIGNMENT switch_list
    (41) procedure_declaration -> . PROCEDURE procedure_heading procedure_body
    (42) procedure_declaration -> . type PROCEDURE procedure_heading procedure_body
    (69) unconditional_statement -> . basic_statement
    (70) unconditional_statement -> . compound_statement
    (71) unconditional_statement -> . block
    (104) conditional_statement -> . if_statement
    (105) conditional_statement -> . if_statement ELSE statement
    (106) conditional_statement -> . if_clause for_statement
    (107) conditional_statement -> . label COLON conditional_statement
    (110) for_statement -> . for_clause statement
    (111) for_statement -> . label COLON for_statement
    (18) local_or_own_type -> . type
    (19) local_or_own_type -> . TOWN type
    (20) type -> . TREAL
    (21) type -> . TINTEGER
    (22) type -> . TBOOLEAN
    (72) basic_statement -> . unlabelled_basic_statement
    (73) basic_statement -> . label COLON basic_statement
    (8) compound_statement -> . unlabelled_compound
    (9) compound_statement -> . label COLON compound_statement
    (3) block -> . unlabelled_block
    (4) block -> . TLABEL COLON block
    (108) if_statement -> . if_clause unconditional_statement
    (109) if_clause -> . IF boolean_expression THEN
    (74) label -> . IDENTIFIER
    (75) label -> . unsigned_integer
    (112) for_clause -> . FOR variable ASSIGNMENT for_list DO
    (76) unlabelled_basic_statement -> . assignment_statement
    (77) unlabelled_basic_statement -> . go_to_statement
    (78) unlabelled_basic_statement -> . procedure_statement
    (10) unlabelled_compound -> . BEGIN compound_tail
    (5) unlabelled_block -> . block_head SEMICOLON compound_tail
    (146) unsigned_integer -> . DIGIT
    (147) unsigned_integer -> . unsigned_integer DIGIT
    (79) assignment_statement -> . left_part_list arithmetic_expression
    (80) assignment_statement -> . left_part_list boolean_expression
    (85) go_to_statement -> . GOTO designational_expression
    (92) procedure_statement -> . procedure_identifier actual_parameter_part
    (6) block_head -> . BEGIN declaration
    (7) block_head -> . block_head SEMICOLON declaration
    (81) left_part_list -> . left_part
    (82) left_part_list -> . left_part_list left_part
    (44) procedure_identifier -> . IDENTIFIER
    (83) left_part -> . variable ASSIGNMENT
    (84) left_part -> . procedure_identifier ASSIGNMENT
    (172) variable -> . simple_variable
    (173) variable -> . subscripted_variable
    (174) simple_variable -> . variable_identifier
    (176) subscripted_variable -> . array_identifier LBBRACKET subscript_list RBBRACKET
    (175) variable_identifier -> . IDENTIFIER
    (31) array_identifier -> . IDENTIFIER

    TARRAY          shift and go to state 32
    SWITCH          shift and go to state 27
    PROCEDURE       shift and go to state 44
    TOWN            shift and go to state 46
    TREAL           shift and go to state 15
    TINTEGER        shift and go to state 18
    TBOOLEAN        shift and go to state 26
    TLABEL          shift and go to state 4
    IF              shift and go to state 45
    IDENTIFIER      shift and go to state 47
    FOR             shift and go to state 37
    BEGIN           shift and go to state 1
    DIGIT           shift and go to state 6
    GOTO            shift and go to state 20

    subscripted_variable           shift and go to state 13
    procedure_identifier           shift and go to state 21
    unlabelled_compound            shift and go to state 2
    array_identifier               shift and go to state 14
    unsigned_integer               shift and go to state 9
    if_clause                      shift and go to state 16
    type_declaration               shift and go to state 17
    block_head                     shift and go to state 10
    label                          shift and go to state 19
    left_part                      shift and go to state 34
    left_part_list                 shift and go to state 40
    compound_statement             shift and go to state 22
    assignment_statement           shift and go to state 23
    procedure_statement            shift and go to state 24
    conditional_statement          shift and go to state 25
    statement                      shift and go to state 29
    switch_declaration             shift and go to state 39
    if_statement                   shift and go to state 30
    type                           shift and go to state 31
    basic_statement                shift and go to state 33
    for_statement                  shift and go to state 35
    compound_tail                  shift and go to state 36
    go_to_statement                shift and go to state 38
    variable_identifier            shift and go to state 41
    declaration                    shift and go to state 42
    variable                       shift and go to state 43
    unconditional_statement        shift and go to state 28
    procedure_declaration          shift and go to state 48
    unlabelled_block               shift and go to state 5
    simple_variable                shift and go to state 49
    unlabelled_basic_statement     shift and go to state 50
    local_or_own_type              shift and go to state 51
    for_clause                     shift and go to state 52
    array_declaration              shift and go to state 53
    block                          shift and go to state 54

state 2

    (8) compound_statement -> unlabelled_compound .

    SEMICOLON       reduce using rule 8 (compound_statement -> unlabelled_compound .)
    END             reduce using rule 8 (compound_statement -> unlabelled_compound .)
    $end            reduce using rule 8 (compound_statement -> unlabelled_compound .)
    ELSE            reduce using rule 8 (compound_statement -> unlabelled_compound .)


state 3

    (2) program -> compound_statement .

    $end            reduce using rule 2 (program -> compound_statement .)


state 4

    (4) block -> TLABEL . COLON block

    COLON           shift and go to state 55


state 5

    (3) block -> unlabelled_block .

    END             reduce using rule 3 (block -> unlabelled_block .)
    SEMICOLON       reduce using rule 3 (block -> unlabelled_block .)
    $end            reduce using rule 3 (block -> unlabelled_block .)
    ELSE            reduce using rule 3 (block -> unlabelled_block .)


state 6

    (146) unsigned_integer -> DIGIT .

    DIGIT           reduce using rule 146 (unsigned_integer -> DIGIT .)
    DOT             reduce using rule 146 (unsigned_integer -> DIGIT .)
    EREAL           reduce using rule 146 (unsigned_integer -> DIGIT .)
    POWER           reduce using rule 146 (unsigned_integer -> DIGIT .)
    TIMES           reduce using rule 146 (unsigned_integer -> DIGIT .)
    DIV             reduce using rule 146 (unsigned_integer -> DIGIT .)
    MOD             reduce using rule 146 (unsigned_integer -> DIGIT .)
    PLUS            reduce using rule 146 (unsigned_integer -> DIGIT .)
    MINUS           reduce using rule 146 (unsigned_integer -> DIGIT .)
    COLON           reduce using rule 146 (unsigned_integer -> DIGIT .)
    UNTIL           reduce using rule 146 (unsigned_integer -> DIGIT .)
    LESS            reduce using rule 146 (unsigned_integer -> DIGIT .)
    NOTGREATER      reduce using rule 146 (unsigned_integer -> DIGIT .)
    EQUAL           reduce using rule 146 (unsigned_integer -> DIGIT .)
    NOTLESS         reduce using rule 146 (unsigned_integer -> DIGIT .)
    GREATER         reduce using rule 146 (unsigned_integer -> DIGIT .)
    NOTEQUAL        reduce using rule 146 (unsigned_integer -> DIGIT .)
    RCBRACKET       reduce using rule 146 (unsigned_integer -> DIGIT .)
    END             reduce using rule 146 (unsigned_integer -> DIGIT .)
    SEMICOLON       reduce using rule 146 (unsigned_integer -> DIGIT .)
    ELSE            reduce using rule 146 (unsigned_integer -> DIGIT .)
    RBBRACKET       reduce using rule 146 (unsigned_integer -> DIGIT .)
    COMMA           reduce using rule 146 (unsigned_integer -> DIGIT .)
    STEP            reduce using rule 146 (unsigned_integer -> DIGIT .)
    WHILE           reduce using rule 146 (unsigned_integer -> DIGIT .)
    DO              reduce using rule 146 (unsigned_integer -> DIGIT .)
    AND             reduce using rule 146 (unsigned_integer -> DIGIT .)
    OR              reduce using rule 146 (unsigned_integer -> DIGIT .)
    IMPL            reduce using rule 146 (unsigned_integer -> DIGIT .)
    EQUIV           reduce using rule 146 (unsigned_integer -> DIGIT .)
    THEN            reduce using rule 146 (unsigned_integer -> DIGIT .)


state 7

    (9) compound_statement -> label . COLON compound_statement

    COLON           shift and go to state 56


state 8

    (0) S' -> program .



state 9

    (75) label -> unsigned_integer .
    (147) unsigned_integer -> unsigned_integer . DIGIT

    COLON           reduce using rule 75 (label -> unsigned_integer .)
    COMMA           reduce using rule 75 (label -> unsigned_integer .)
    SEMICOLON       reduce using rule 75 (label -> unsigned_integer .)
    END             reduce using rule 75 (label -> unsigned_integer .)
    ELSE            reduce using rule 75 (label -> unsigned_integer .)
    RCBRACKET       reduce using rule 75 (label -> unsigned_integer .)
    DIGIT           shift and go to state 57


state 10

    (5) unlabelled_block -> block_head . SEMICOLON compound_tail
    (7) block_head -> block_head . SEMICOLON declaration

    SEMICOLON       shift and go to state 58


state 11

    (74) label -> IDENTIFIER .

    COLON           reduce using rule 74 (label -> IDENTIFIER .)


state 12

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 13

    (173) variable -> subscripted_variable .

    POWER           reduce using rule 173 (variable -> subscripted_variable .)
    TIMES           reduce using rule 173 (variable -> subscripted_variable .)
    DIV             reduce using rule 173 (variable -> subscripted_variable .)
    MOD             reduce using rule 173 (variable -> subscripted_variable .)
    ELSE            reduce using rule 173 (variable -> subscripted_variable .)
    PLUS            reduce using rule 173 (variable -> subscripted_variable .)
    MINUS           reduce using rule 173 (variable -> subscripted_variable .)
    LESS            reduce using rule 173 (variable -> subscripted_variable .)
    NOTGREATER      reduce using rule 173 (variable -> subscripted_variable .)
    EQUAL           reduce using rule 173 (variable -> subscripted_variable .)
    NOTLESS         reduce using rule 173 (variable -> subscripted_variable .)
    GREATER         reduce using rule 173 (variable -> subscripted_variable .)
    NOTEQUAL        reduce using rule 173 (variable -> subscripted_variable .)
    AND             reduce using rule 173 (variable -> subscripted_variable .)
    OR              reduce using rule 173 (variable -> subscripted_variable .)
    IMPL            reduce using rule 173 (variable -> subscripted_variable .)
    EQUIV           reduce using rule 173 (variable -> subscripted_variable .)
    COLON           reduce using rule 173 (variable -> subscripted_variable .)
    ASSIGNMENT      reduce using rule 173 (variable -> subscripted_variable .)
    END             reduce using rule 173 (variable -> subscripted_variable .)
    SEMICOLON       reduce using rule 173 (variable -> subscripted_variable .)
    THEN            reduce using rule 173 (variable -> subscripted_variable .)
    RCBRACKET       reduce using rule 173 (variable -> subscripted_variable .)
    COMMA           reduce using rule 173 (variable -> subscripted_variable .)
    DO              reduce using rule 173 (variable -> subscripted_variable .)
    RBBRACKET       reduce using rule 173 (variable -> subscripted_variable .)
    STEP            reduce using rule 173 (variable -> subscripted_variable .)
    WHILE           reduce using rule 173 (variable -> subscripted_variable .)
    UNTIL           reduce using rule 173 (variable -> subscripted_variable .)


state 14

    (176) subscripted_variable -> array_identifier . LBBRACKET subscript_list RBBRACKET

    LBBRACKET       shift and go to state 59


state 15

    (20) type -> TREAL .

    TARRAY          reduce using rule 20 (type -> TREAL .)
    PROCEDURE       reduce using rule 20 (type -> TREAL .)
    IDENTIFIER      reduce using rule 20 (type -> TREAL .)


state 16

    (106) conditional_statement -> if_clause . for_statement
    (108) if_statement -> if_clause . unconditional_statement
    (110) for_statement -> . for_clause statement
    (111) for_statement -> . label COLON for_statement
    (69) unconditional_statement -> . basic_statement
    (70) unconditional_statement -> . compound_statement
    (71) unconditional_statement -> . block
    (112) for_clause -> . FOR variable ASSIGNMENT for_list DO
    (74) label -> . IDENTIFIER
    (75) label -> . unsigned_integer
    (72) basic_statement -> . unlabelled_basic_statement
    (73) basic_statement -> . label COLON basic_statement
    (8) compound_statement -> . unlabelled_compound
    (9) compound_statement -> . label COLON compound_statement
    (3) block -> . unlabelled_block
    (4) block -> . TLABEL COLON block
    (146) unsigned_integer -> . DIGIT
    (147) unsigned_integer -> . unsigned_integer DIGIT
    (76) unlabelled_basic_statement -> . assignment_statement
    (77) unlabelled_basic_statement -> . go_to_statement
    (78) unlabelled_basic_statement -> . procedure_statement
    (10) unlabelled_compound -> . BEGIN compound_tail
    (5) unlabelled_block -> . block_head SEMICOLON compound_tail
    (79) assignment_statement -> . left_part_list arithmetic_expression
    (80) assignment_statement -> . left_part_list boolean_expression
    (85) go_to_statement -> . GOTO designational_expression
    (92) procedure_statement -> . procedure_identifier actual_parameter_part
    (6) block_head -> . BEGIN declaration
    (7) block_head -> . block_head SEMICOLON declaration
    (81) left_part_list -> . left_part
    (82) left_part_list -> . left_part_list left_part
    (44) procedure_identifier -> . IDENTIFIER
    (83) left_part -> . variable ASSIGNMENT
    (84) left_part -> . procedure_identifier ASSIGNMENT
    (172) variable -> . simple_variable
    (173) variable -> . subscripted_variable
    (174) simple_variable -> . variable_identifier
    (176) subscripted_variable -> . array_identifier LBBRACKET subscript_list RBBRACKET
    (175) variable_identifier -> . IDENTIFIER
    (31) array_identifier -> . IDENTIFIER

    FOR             shift and go to state 37
    IDENTIFIER      shift and go to state 47
    TLABEL          shift and go to state 4
    DIGIT           shift and go to state 6
    BEGIN           shift and go to state 1
    GOTO            shift and go to state 20

    subscripted_variable           shift and go to state 13
    unlabelled_compound            shift and go to state 2
    array_identifier               shift and go to state 14
    block_head                     shift and go to state 10
    left_part                      shift and go to state 34
    left_part_list                 shift and go to state 40
    compound_statement             shift and go to state 22
    assignment_statement           shift and go to state 23
    procedure_statement            shift and go to state 24
    label                          shift and go to state 60
    for_clause                     shift and go to state 52
    for_statement                  shift and go to state 61
    go_to_statement                shift and go to state 38
    variable_identifier            shift and go to state 41
    variable                       shift and go to state 43
    unconditional_statement        shift and go to state 62
    unlabelled_block               shift and go to state 5
    procedure_identifier           shift and go to state 21
    simple_variable                shift and go to state 49
    unlabelled_basic_statement     shift and go to state 50
    unsigned_integer               shift and go to state 9
    basic_statement                shift and go to state 33
    block                          shift and go to state 54

state 17

    (13) declaration -> type_declaration .

    SEMICOLON       reduce using rule 13 (declaration -> type_declaration .)


state 18

    (21) type -> TINTEGER .

    TARRAY          reduce using rule 21 (type -> TINTEGER .)
    PROCEDURE       reduce using rule 21 (type -> TINTEGER .)
    IDENTIFIER      reduce using rule 21 (type -> TINTEGER .)


state 19

    (107) conditional_statement -> label . COLON conditional_statement
    (111) for_statement -> label . COLON for_statement
    (73) basic_statement -> label . COLON basic_statement
    (9) compound_statement -> label . COLON compound_statement

    COLON           shift and go to state 63


state 20

    (85) go_to_statement -> GOTO . designational_expression
    (86) designational_expression -> . simple_designational_expression
    (87) designational_expression -> . if_clause simple_designational_expression ELSE designational_expression
    (88) simple_designational_expression -> . label
    (89) simple_designational_expression -> . switch_designator
    (90) simple_designational_expression -> . LCBRACKET designational_expression RCBRACKET
    (109) if_clause -> . IF boolean_expression THEN
    (74) label -> . IDENTIFIER
    (75) label -> . unsigned_integer
    (91) switch_designator -> . switch_identifier LBBRACKET subscript_expression RBBRACKET
    (146) unsigned_integer -> . DIGIT
    (147) unsigned_integer -> . unsigned_integer DIGIT
    (38) switch_identifier -> . IDENTIFIER

    LCBRACKET       shift and go to state 69
    IF              shift and go to state 45
    IDENTIFIER      shift and go to state 70
    DIGIT           shift and go to state 6

    designational_expression       shift and go to state 64
    simple_designational_expression shift and go to state 71
    switch_designator              shift and go to state 65
    if_clause                      shift and go to state 66
    label                          shift and go to state 67
    switch_identifier              shift and go to state 68
    unsigned_integer               shift and go to state 9

state 21

    (92) procedure_statement -> procedure_identifier . actual_parameter_part
    (84) left_part -> procedure_identifier . ASSIGNMENT
    (93) actual_parameter_part -> . LCBRACKET RCBRACKET
    (94) actual_parameter_part -> . LCBRACKET actual_parameter_list RCBRACKET

    ASSIGNMENT      shift and go to state 72
    LCBRACKET       shift and go to state 73

    actual_parameter_part          shift and go to state 74

state 22

    (70) unconditional_statement -> compound_statement .

    SEMICOLON       reduce using rule 70 (unconditional_statement -> compound_statement .)
    END             reduce using rule 70 (unconditional_statement -> compound_statement .)
    ELSE            reduce using rule 70 (unconditional_statement -> compound_statement .)


state 23

    (76) unlabelled_basic_statement -> assignment_statement .

    END             reduce using rule 76 (unlabelled_basic_statement -> assignment_statement .)
    SEMICOLON       reduce using rule 76 (unlabelled_basic_statement -> assignment_statement .)
    ELSE            reduce using rule 76 (unlabelled_basic_statement -> assignment_statement .)


state 24

    (78) unlabelled_basic_statement -> procedure_statement .

    END             reduce using rule 78 (unlabelled_basic_statement -> procedure_statement .)
    SEMICOLON       reduce using rule 78 (unlabelled_basic_statement -> procedure_statement .)
    ELSE            reduce using rule 78 (unlabelled_basic_statement -> procedure_statement .)


state 25

    (67) statement -> conditional_statement .

    END             reduce using rule 67 (statement -> conditional_statement .)
    SEMICOLON       reduce using rule 67 (statement -> conditional_statement .)


state 26

    (22) type -> TBOOLEAN .
